--- a/Main/package.json
+++ b/Main/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "seed": "node seeds/seed.js",
-    "dev":"nodemon server.js"
+    "seed": "node seeds/seed.js"
   },
   "keywords": [],
   "author": "",
@@ -19,8 +18,6 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
-    "nodeman": "^1.1.2",
-    "nodemon": "^3.1.9",
     "pg": "^8.11.3",
     "sequelize": "^6.3.5"
   },
